now we can set grid on model and render on screen with button click action, currently hard coded to 3 by 3

--- a/app/templates/playgame.hbs
+++ b/app/templates/playgame.hbs
@@ -4,6 +4,8 @@
     <p>{{player.name}}</p>
   {{/each}}
 
+  <Button @function={{this.setGrid}}>Start</Button>
+
   <Grid>
     {{#each @model.grid as |row|}}
       {{#each row as |square|}}
