able to fire getInput click event that passes current state of marker and position of particular square back to controller for validation

--- a/app/templates/playgame.hbs
+++ b/app/templates/playgame.hbs
@@ -9,8 +9,10 @@
   <Grid>
     {{#each @model.grid as |row|}}
       {{#each row as |square|}}
-      {{log square}}
-        <div class="grid__item">{{square.marker}}</div>  
+      {{!-- {{log square}} --}}
+      <button type="button" class="grid__item" {{on "click" (fn this.getInput square.marker square.position)}}>{{square.marker}}</button> 
+      {{!-- <Square @function={{this.getInput}} @marker={{square.marker}} @onClick{{fn this.getInput square.marker}}>{{square.marker}}</Square> --}}
+        {{!-- <div class="grid__item" {{on "click" this.getInput}}>{{square.marker}}</div>   --}}
       {{/each}}
     {{/each}}
   </Grid>
