--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
 @import "reset.scss";
+@import "grid.scss";
 
 .game-container {
   font-family: "Roboto", sans-serif;
@@ -7,4 +8,6 @@
 
 .game__title {
   text-align: center;
+  font-size: 2rem;
+  margin: 1rem;
 }
