added some styles, includes player names section

--- a/app/components/button.hbs
+++ b/app/components/button.hbs
@@ -1,3 +1,6 @@
-<button type="button" class="game__button" {{on "click" @function}}>
-  {{yield}}
-</button>
+{{!-- {{#if (eq @type "button")}} --}}
+  <button type={{@type}} class="game__button" {{on "click" @function}}>
+    {{yield}}
+  </button>
+{{!-- {{/if}}
+{{#if (eq @type "submit")}} --}}
