--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -1,7 +1,7 @@
 .grid-container {
   width: 27rem;
   height: 27rem;
-  margin: 0 auto;
+  margin: 1rem auto;
   background-color: #637ff7;
   color: #fff;
   border: 0.375rem solid #6056d6;
