--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,13 +1,16 @@
 @import "reset.scss";
+@import "players.scss";
 @import "grid.scss";
 
 .game-container {
   font-family: "Roboto", sans-serif;
-  font-weight: lighter;
+  font-weight: 500;
+  text-align: center;
+  margin: 1rem;
 }
 
 .game__title {
-  text-align: center;
-  font-size: 2rem;
-  margin: 1rem;
+  color: #6056d6;
+  font-size: 3rem;
+  margin: 2rem 1rem;
 }
