--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -1,9 +1,13 @@
 .form {
   margin: 1rem;
   &__title {
-    margin: 1rem;
+    margin: 1rem 1rem 0.5rem 1rem;
     color: #31298a;
     font-size: 2rem;
+  }
+  &__subtitle {
+    margin-bottom: 0.5rem;
+    color: #8a80ff;
   }
   &__group {
     font-size: 1.5rem;
