now have a end gamesection, can display who's turn it is, and can reset game with same players

--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -27,9 +27,9 @@
     }
   }
   &__button-submit {
+    overflow: hidden;
     margin-top: 0.75rem;
     font-size: 2rem;
-    height: 2rem;
     width: 9rem;
     border-radius: 0.25rem;
     background-color: #31298a;
