--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 @import "form.scss";
 @import "players.scss";
 @import "grid.scss";
+@import "end-modal.scss";
 
 .game-container {
   font-family: "Roboto", sans-serif;
