--- a/app/components/button.hbs
+++ b/app/components/button.hbs
@@ -1,5 +1,5 @@
 {{!-- {{#if (eq @type "button")}} --}}
-  <button type={{@type}} class="game__button" {{on "click" @function}}>
+  <button type={{@type}}  class={{@class}} {{on "click" @function}}>
     {{yield}}
   </button>
 {{!-- {{/if}}
