--- a/app/templates/playgame.hbs
+++ b/app/templates/playgame.hbs
@@ -1,6 +1,7 @@
 <main class="game-container">
   <h1 class="game__title">Tic Tac Toe</h1>
 
+{{#if (eq this.userView "playerNames")}}
   <form class="form">
     <h2 class='form__title'>Enter Player Names</h2>
     <h5 class='form__subtitle'>*player who goes first is selected at random</h5>
@@ -24,8 +25,7 @@
  {{!-- <Button @type="submit" @onClick{{fn this.newGame }}></Button> --}}
   </form>
 
-
-
+{{else if (eq this.userView "playingGame")}}
   <section class="players-container">
     <div class="players__section">
     {{#each @model.players as |player|}}
@@ -43,6 +43,23 @@
     </div>
   </section>
 
+    <section class="grid-container">
+      {{#each @model.grid as |row|}}
+        {{#each row as |square|}}
+            {{#if this.winner}}
+            <div class="grid__item">{{square.marker}}</div>
+            {{else}}
+              {{#if (eq square.marker "")}}
+                <button type="button" class="grid__item" {{on "click" (fn this.makeMove square.position)}}>{{square.marker}}</button> 
+              {{else}}
+                <div class="grid__item">{{square.marker}}</div>
+              {{/if}}
+          {{/if}}
+        {{/each}}
+      {{/each}}
+  </section>
+
+{{else if (eq this.userView "endGame")}}
   <section class="game__section">
     <div class="end-modal">
       <h2 class="end-modal__title">
@@ -59,13 +76,13 @@
         <div class="end-modal__buttons-wrapper">
           <Button @class="end-modal__button end-modal__button--same-players" @type="button" @function={{this.newGame}}>Same Players</Button>
           <p class="end-modal__text">OR</p>
-          <Button @class="end-modal__button end-modal__button--new-players" @type="button" @function={{this.setGrid}}>New Players</Button>
+          <Button @class="end-modal__button end-modal__button--new-players" @type="button" @function={{this.newPlayers}}>New Players</Button>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="grid-container">
+    <section class="grid-container">
       {{#each @model.grid as |row|}}
         {{#each row as |square|}}
             {{#if this.winner}}
@@ -80,7 +97,6 @@
         {{/each}}
       {{/each}}
   </section>
-
-
+{{/if}}
 
 </main>
