--- a/app/styles/_players.scss
+++ b/app/styles/_players.scss
@@ -1,12 +1,21 @@
 .players-container {
   margin: 1rem;
-  .players__section {
+  .players__section-wrapper {
     display: flex;
     justify-content: space-evenly;
+  }
+  .players__section {
     color: #31298a;
     font-size: 2rem;
-    .players__title {
-      margin: 0.75rem;
-    }
+  }
+  .players__title {
+    margin: 0.75rem 0.75rem 0 0.75rem;
+  }
+  .players__text {
+    font-size: 1.5rem;
+    color: #8a80ff;
+  }
+  .players__subtitle {
+    font-size: 4rem;
   }
 }
