--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
 @import "reset.scss";
+@import "base_variables";
 @import "form.scss";
 @import "players.scss";
 @import "grid.scss";
@@ -8,11 +9,11 @@
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   text-align: center;
-  margin: 1rem;
+  margin: $all-sides-same;
 }
 
 .game__title {
-  color: #31298a;
-  font-size: 3rem;
-  margin: 2rem 1rem;
+  color: $dark-purple;
+  font-size: $h1-font-size;
+  margin: $h1-margin;
 }
