--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -17,22 +17,32 @@
   &__control {
     margin-top: 0.5rem;
     font-size: 1rem;
-    height: 1.5rem;
+    height: 2rem;
     border-radius: 0.25rem;
     background-color: #6056d6;
     border-color: $light-purple;
     color: $white;
+    @media only screen and (max-width: 64rem) {
+      height: 3rem;
+    }
     &::placeholder {
       color: $white;
+      @media only screen and (max-width: 64rem) {
+        text-align: center;
+      }
     }
   }
   &__button-submit {
     margin-top: 0.75rem;
     font-size: 2rem;
     width: 9rem;
+    height: 3rem;
     border-radius: 0.25rem;
     background-color: #31298a;
     border-color: #8a80ff;
     color: $white;
+    @media only screen and (max-width: 64rem) {
+      height: 4rem;
+    }
   }
 }
