--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,7 @@
 @import "players.scss";
 @import "grid.scss";
 @import "end-modal.scss";
+@import "footer.scss";
 
 .game-container {
   font-family: "Roboto", sans-serif;
