--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -19,14 +19,22 @@
     font-size: 1rem;
     height: 2rem;
     border-radius: 0.25rem;
-    background-color: #6056d6;
-    border-color: $light-purple;
-    color: $white;
+    background-color: $white;
+    border-color: $dark-purple;
+    color: $dark-purple;
+    box-sizing: border-box;
+    @media only screen and (min-width: 64rem) {
+      &:focus,
+      &:hover {
+        border-width: 0.25rem;
+        border-color: $dark-purple;
+      }
+    }
     @media only screen and (max-width: 64rem) {
       height: 3rem;
     }
     &::placeholder {
-      color: $white;
+      color: $dark-purple;
       @media only screen and (max-width: 64rem) {
         text-align: center;
       }
@@ -38,9 +46,19 @@
     width: 9rem;
     height: 3rem;
     border-radius: 0.25rem;
-    background-color: #31298a;
-    border-color: #8a80ff;
+    background-color: $dark-purple;
+    border-color: $dark-purple;
     color: $white;
+    @media only screen and (min-width: 64rem) {
+      &:focus,
+      &:hover {
+        width: 9.25rem;
+        height: 3.1rem;
+        border-color: $light-purple;
+        color: $light-purple;
+        font-size: 2.25rem;
+      }
+    }
     @media only screen and (max-width: 64rem) {
       height: 4rem;
     }
