added more documentation to JS, added favicon, and added more accessibility for screen readers

--- a/app/components/button.hbs
+++ b/app/components/button.hbs
@@ -1,5 +1,5 @@
 {{#if (eq @usage "grid")}}
-  <button type={{@type}}  class={{@class}} {{on "click" (fn @clickFunction @param)}} {{on "mouseenter" (fn @hoverInFunction @param)}} {{on "mouseleave" (fn @hoverOutFunction @param)}}>
+  <button type={{@type}} class={{@class}} {{on "click" (fn @clickFunction @param)}} aria-label={{@aria-label}}>
     {{yield}}
   </button>
   {{else}}
