--- a/app/templates/playgame.hbs
+++ b/app/templates/playgame.hbs
@@ -51,7 +51,7 @@
             {{#if (eq square.marker "")}}
               <Button @type="button" @usage="grid" @class={{if (eq this.currentMarker "x") "grid__item grid__item--unmarked-x" "grid__item grid__item--unmarked-o"}} @clickFunction={{this.makeMove}} @param={{square.position}} @aria-label="Free Space"></Button>
             {{else}}
-              <div class="grid__item grid__item--marked" tabindex="0" role="button" aria-pressed="true">{{square.marker}}</div>
+              <div class="grid__item grid__item--marked" tabindex="0" role="button" aria-pressed="true" aria-label="Square {{square.id}} has an {{square.marker}}">{{square.marker}}</div>
             {{/if}}
         {{/if}}
       {{/each}}
