added the ability to mark the winning squares so they can display to the user

--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -38,5 +38,8 @@
       cursor: url(/assets/images/O-Cursor.cur), pointer;
       caret-color: $white;
     }
+    &--winning {
+      color: #eb63f7;
+    }
   }
 }
