--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -55,7 +55,7 @@
         width: 9.25rem;
         height: 3.1rem;
         border-color: $light-purple;
-        color: $light-purple;
+        background-color: #6056d6;
         font-size: 2.25rem;
       }
     }
